Resolved issues: •	752 - UI_Admin_Laptop resolution: In Assign Project 	Screen, Listbox is collapsed with footer( not displayed 	properly).
•	753 - IE11_UI - ICE - Compatibility Issues.

•	723 - UI_Screenshot_Laptop resolution: On click screenshot 
	icon in the reference bar, screenshot is displayed beyond 
	the screenshot panel.
	
•	722 - Reports_UI_Laptop resolution: Reports are not 
	displayed properly.
	
•	720 - UI - Laptop resolution - Plugin screen - On click of 
	search button in "My task(s)" header, textbox is shifted 
	down.
	
•	646 - Report_UI : Report UI (in https) is not as expected

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3733,6 +3733,27 @@ select:-webkit-autofill:focus {
 	height: 18px;
 }
 
+/**********Search field style**********/
+.searchIcon{
+	cursor: pointer;
+	background: white;
+    padding: 4px;
+    border-radius: 7px 7px 7px 7px;
+    position: relative;
+    left: 61px;
+}
+.searchInput{
+	border-radius: 7px 0px 0px 7px;
+    border: none;
+    position: relative;
+    left: 60px;
+    height: 28px;
+    outline: none;
+    color: black;
+    padding-left: 5px;
+    -webkit-transition: width 0.3s;
+    transition: width 0.3s;
+}
 /*****************Custom Media Queries*****************/
 
 @media screen and (min-width:1280px) and (max-height:960px) {
@@ -3763,7 +3784,7 @@ select:-webkit-autofill:focus {
 	.suitestartend thead, .scenarioReports thead{position: relative;}
 }
 
-@media only screen and (height:1080px){
+/* @media only screen and (max-height:680px){
 	.designDataTable{width: 1617px;}
 	.container-plugins{width: 1510px;}
 	.plugin-block span{
@@ -3772,9 +3793,9 @@ select:-webkit-autofill:focus {
 	.tabeleCellPadding{width: 4%;}
 	.suitestartend thead{width: calc(100% - 1004px);}
 	.formatpdfbrwsrexport{left: 75px;}
-}
+} */
 
-@media screen and (max-height: 675px) {
+@media screen and (max-height: 680px) {
     .login-bg-img {
         width: 42%;
     }
@@ -3796,6 +3817,9 @@ select:-webkit-autofill:focus {
     .plugin-block {
         margin-bottom: 3%
     }
+    .task-bar{padding: 5px 15px;}
+    .searchInput{left: 50px;}
+    .searchIcon{left: 51px;}
     .lbs-single {
         min-height: calc(100% - 67%) !important;
     }
@@ -3810,7 +3834,8 @@ select:-webkit-autofill:focus {
 		margin-top: 20px;
 	}
 	.suitestartend thead{
-		width: calc(100% - 765px);
+		/* width: calc(100% - 765px); */
+		width: calc(100% - 728px);
 	}
 	.ApptypeScreenView{
 		min-height: 50% !important;
@@ -3827,6 +3852,14 @@ select:-webkit-autofill:focus {
 	.container-plugins .col-md-12:nth-child(2) {
     	height: calc(100% - 125px);
 	}
+	#allProjectAP,#assignedProjectAP, #allProjectAP[size],#assignedProjectAP[size] {
+	    min-height: 238px !important;
+	}
+	.encryptionData{margin-bottom: 0}
+	#encryption_btns{float: right; position: relative; top: 8px;}
+	.encryptionData-body{height: 176px;}
+	#optimization-fn{position: relative; top: 50%; left: 50%; transform: translateX(-50%) translateY(70%);}
+	.col-md-5{width: 43.5%;}
 }
 
 @media screen and (min-device-width: 1440px) and (max-device-height: 900px) {
@@ -3872,26 +3905,4 @@ select:-webkit-autofill:focus {
 	.list-inline{margin-left: -6px !important;}
 	.searchIcon{left: 27px !important; padding-bottom: 1px !important; top: 1px !important;}
 	.searchInput{left: 26px !important;height: 29px !important;}
-}
-
-/**********Search field style**********/
-.searchIcon{
-	cursor: pointer;
-	background: white;
-    padding: 4px;
-    border-radius: 7px 7px 7px 7px;
-    position: relative;
-    left: 61px;
-}
-.searchInput{
-	border-radius: 7px 0px 0px 7px;
-    border: none;
-    position: relative;
-    left: 60px;
-    height: 28px;
-    outline: none;
-    color: black;
-    padding-left: 5px;
-    -webkit-transition: width 0.3s;
-    transition: width 0.3s;
 }
